# iron-boy

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  README.md
clients/desktop/: Cargo.toml
clients/desktop/src/: audio.rs  frame.rs  lib.rs  logger.rs  main.rs  video.rs  window.rs
clients/simple-desktop/: Cargo.toml
clients/simple-desktop/src/: audio.rs  main.rs
core/: Cargo.toml
core/src/: boot_rom.rs  bus.rs  game_boy.rs  gb.rs  lib.rs  main.rs  timer.rs  video.rs
core/src/apu/: envelope.rs  frame_sequencer.rs  length_timer.rs  lsfr.rs  mixer.rs  mod.rs  noise.rs  pulse.rs  registers.rs  square.rs  sweep.rs  volume_envelope.rs  wave.rs
core/src/cartridge/: header.rs  mbc1.rs  mbc2.rs  mbc3.rs  mbc5.rs  mod.rs  no_mbc.rs
core/src/cpu/: disassembler.rs  execute.rs  instructions.rs  interrupts.rs  mod.rs  operands.rs  registers.rs  tests.rs
core/src/io/: audio_player.rs  display.rs  joypad.rs  mod.rs  ppu.rs  serial_transfer.rs  timer.rs
core/src/memory/: dma.rs  mod.rs  registers.rs  system_bus.rs
core/src/ppu/: background.rs  color.rs  mod.rs  object.rs  palette.rs  registers.rs  tile.rs  window.rs
cpu/: Cargo.toml
cpu/src/: bus.rs  cartridge.rs  cpu.rs  lib.rs  main.rs  mmu.rs  opcode.rs  opcodes.rs  register.rs  registers.rs
cpu/src/cartridge/: cartridge_header.rs  header.rs  mod.rs
cpu/src/cpu/: alu_instructions.rs  branch_instructions.rs  execute.rs  instruction_handling.rs  instructions.rs  lsm_instructions.rs  mod.rs  (+4 more)
crates/core/: Cargo.toml
crates/ironboy_apu/: Cargo.toml
crates/ironboy_cartridge/: Cargo.toml
crates/ironboy_common/: Cargo.toml
crates/ironboy_core/: Cargo.toml
crates/ironboy_core/src/: apu.rs  cartridge.rs  dma.rs  gb.rs  joypad.rs  lib.rs  memory.rs  serial_transfer.rs
crates/ironboy_core/src/apu/: noise.rs  period.rs  volume_envelope.rs  wave.rs
crates/ironboy_core/src/cartridge/: header.rs
crates/ironboy_core/src/cpu/: dissassemble.rs  execute.rs  instructions.rs  operands.rs  registers.rs
crates/ironboy_core/src/ppu/: background.rs  palette.rs  registers.rs  tile.rs
crates/ironboy_cpu/: Cargo.toml
crates/ironboy_joypad/: Cargo.toml
crates/ironboy_ppu/: Cargo.toml
crates/ironboy_serial_transfer/: Cargo.toml
crates/ironboy_system_bus/: Cargo.toml
crates/ironboy_system_bus/src/: lib.rs
crates/ironboy_tests/: Cargo.toml
crates/ironboy_timer/: Cargo.toml
crates/tests/: Cargo.toml
platform/: Cargo.toml
platform/desktop/: Cargo.toml
platform/src/: audio.rs  clock.rs  lib.rs  main.rs
platform/wasm/: Cargo.toml  LICENSE_MIT
platform/wasm/app/: index.html  index.js  package-lock.json
platform/wasm/src/: lib.rs  utils.rs
platform/wasm/web/: package.json  webpack.config.js
tools/: Cargo.toml
tools/src/: main.rs
utils/src/: lib.rs
(+140 files in other folders)
