[package]
name = "ironboy_core"
version = "0.1.0"
edition = "2024"


[dependencies]
ironboy_cpu = {path = "../ironboy_cpu"}
ironboy_system_bus = {path= "../ironboy_system_bus"}
ironboy_apu = {path = "../ironboy_apu"}
ironboy_ppu = {path = "../ironboy_ppu"}
ironboy_cartridge = {path = "../ironboy_cartridge"}
ironboy_joypad = {path = "../ironboy_joypad"}
ironboy_common = {path = "../ironboy_common"}

serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"


