[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ironboy-core = {path = "../../core"}
js-sys = "0.3.72"
wasm-bindgen = "0.2.95"
web-sys = {version = "0.3.72", features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'ImageData',
  'KeyboardEvent',
  'Window',
  'AudioContext',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
]}
